# uav_landing

./: .gitignore  CMakeLists.txt  README.md  added_txt.txt  package.xml
action/: Landing.action
aruco_ros/aruco_ros/: CMakeLists.txt
aruco_ros/aruco_ros/launch/: double.launch.py  marker_publisher.launch.py  single.launch.py  single_1.launch.py  single_2.launch.py  uav_aruco_detection_1.launch.py  uav_aruco_detection_1_1.launch.py  uav_aruco_detection_2.launch.py  uav_aruco_detection_launch.py
aruco_ros/aruco_ros/src/: camera_info_publisher.cpp  marker_detector.cpp  marker_publish.cpp  marker_subscriber.cpp  simple_double.cpp  simple_single.cpp  simple_single_1.cpp  simple_single_2.cpp  velocity_publisher.cpp
folder_added/: test_added.txt
src/: image_subscriber.cpp  regulator_node.cpp
start/: uav_landing.yml
uav_landing/: CMakeLists.txt
uav_landing/action/: Landing.action
uav_landing/calibrationdata_pinhole/: ost.txt  ost.yaml
uav_landing/launch/: my_script_launch(open_node_to_terminal).py  uav_landing_launch.py
uav_landing/src/: regulator_node.cpp
uav_landing/start/: start.sh  uav_landing.yml
uav_landing_cpp/: CMakeLists.txt  package.xml
uav_landing_cpp/include/uav_landing_cpp/: visibility_control.h
uav_landing_cpp/launch/: action_client_launch .py  action_server_launch.py
uav_landing_cpp/src/: landing_action_client.cpp  landing_action_server.cpp
